explore page car content updated

--- a/explore.html
+++ b/explore.html
@@ -202,12 +202,12 @@
             <div id="slide1" class="box column red crossover automatic">
                 <img src="image/cars/1.png" alt="">
                 <div class="content">
-                    <h3>Kia Sportage</h3>
-                    <div class="price"> <span>price : </span> $24,000/- </div>
+                    <h3>Ford F-150 XL</h3>
+                    <div class="price"> <span>price : </span> $25,700/- </div>
                     <p>
-                        2022 -
+                        2021 -
                         Automatic -
-                        109,280 miles
+                        17,650 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -216,12 +216,12 @@
             <div id="slide2" class="box column gray car automatic">
                 <img src="image/cars/2.png" alt="">
                 <div class="content">
-                    <h3>Buick Verano GS</h3>
-                    <div class="price"> <span>price : </span> $10,000/- </div>
+                    <h3>Chevrolet Silverado LTZ</h3>
+                    <div class="price"> <span>price : </span> $27,600/- </div>
                     <p>
-                        2016 -
+                        2021 -
                         Automatic -
-                        13,510 miles
+                        25,670 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -230,12 +230,12 @@
             <div id="slide3" class="box column white crossover automatic">
                 <img src="image/cars/3.png" alt="">
                 <div class="content">
-                    <h3>Chevrolet Equinox Premier</h3>
-                    <div class="price"> <span>price : </span> $27,299/- </div>
+                    <h3>Jeep Wrangler Sport</h3>
+                    <div class="price"> <span>price : </span> $35,230/- </div>
                     <p>
-                        2020 -
+                        2021 -
                         Automatic -
-                        13,000 miles
+                        29,700 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -244,12 +244,12 @@
             <div id="slide4" class="box column blue convertible manual">
                 <img src="image/cars/4.png" alt="">
                 <div class="content">
-                    <h3>Mercedes Benz SL-Class</h3>
-                    <div class="price"> <span>price : </span> $23,499/- </div>
+                    <h3>Audi RS5 Sportback</h3>
+                    <div class="price"> <span>price : </span>$58,930/- </div>
                     <p>
-                        2017 -
-                        Manual -
-                        59,000 miles
+                        2021 -
+                        Automatic -
+                        67,950 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -258,12 +258,12 @@
             <div id="slide5" class="box column orange car automatic">
                 <img src="image/cars/5.png" alt="">
                 <div class="content">
-                    <h3>Ford Focus ST</h3>
-                    <div class="price"> <span>price : </span> $15,497/- </div>
+                    <h3>Audi RS5 Sportback Coupe</h3>
+                    <div class="price"> <span>price : </span> $54,670/- </div>
                     <p>
-                        2017 -
+                        2022 -
                         Automatic -
-                        93,000 miles
+                        63,370 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -272,12 +272,12 @@
             <div id="slide6" class="box column blue crossover automatic">
                 <img src="image/cars/6.png" alt="">
                 <div class="content">
-                    <h3>Kia Sportage</h3>
-                    <div class="price"> <span>price : </span> $23,909/- </div>
+                    <h3>BMW M4 Competition</h3>
+                    <div class="price"> <span>price : </span> $62,789/- </div>
                     <p>
-                        2021 -
+                        2022 -
                         Automatic -
-                        20,000 miles
+                        58,760 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -286,12 +286,12 @@
             <div id="slide7" class="box column white crossover automatic">
                 <img src="image/cars/7.png" alt="">
                 <div class="content">
-                    <h3>MG HS</h3>
-                    <div class="price"> <span>price : </span> $42,990/- </div>
+                    <h3>Hyundai Santa Fe SE</h3>
+                    <div class="price"> <span>price : </span> $15,639 </div>
                     <p>
-                        2020 -
+                        2019 -
                         Automatic -
-                        11,060 miles
+                        27,690 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -300,12 +300,12 @@
             <div id="slide8" class="box column gray sportsCar manual">
                 <img src="image/cars/8.png" alt="">
                 <div class="content">
-                    <h3>Porsche Panamera</h3>
-                    <div class="price"> <span>price : </span> $24,995/- </div>
+                    <h3>Subaru Outback Limited</h3>
+                    <div class="price"> <span>price : </span> $17,859/- </div>
                     <p>
-                        2014 -
-                        Manual -
-                        123,478 miles
+                        2020 -
+                        Automatic -
+                        25,649 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -314,12 +314,12 @@
             <div id="slide9" class="box column blue crossover automatic">
                 <img src="image/cars/9.png" alt="">
                 <div class="content">
-                    <h3>Audi e-tron</h3>
-                    <div class="price"> <span>price : </span> $62,000/- </div>
+                    <h3>Mazda CX-5 Touring</h3>
+                    <div class="price"> <span>price : </span> $19,780/- </div>
                     <p>
-                        2019 -
+                        2020 -
                         Automatic -
-                        8,670 miles
+                        17,830 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -328,12 +328,12 @@
             <div id="slide10" class="box column black sportsCar convertible manual">
                 <img src="image/cars/10.png" alt="">
                 <div class="content">
-                    <h3>Porsche Boxster S</h3>
-                    <div class="price"> <span>price : </span> $43,590/- </div>
+                    <h3>BMW Z4 M40i</h3>
+                    <div class="price"> <span>price : </span> $58,991/- </div>
                     <p>
-                        2014 -
+                        2022 -
                         Manual -
-                        31,671 miles
+                        11,449 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -342,12 +342,12 @@
             <div id="slide11" class="box column blue car automatic">
                 <img src="image/cars/11.png" alt="">
                 <div class="content">
-                    <h3>Buick Avista</h3>
-                    <div class="price"> <span>price : </span> $31,295/- </div>
+                    <h3>Ford Mustang GT Convertible</h3>
+                    <div class="price"> <span>price : </span> $43,105/- </div>
                     <p>
                         2022 -
-                        Automatic -
-                        20,910 miles
+                        Manual -
+                        670 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -356,12 +356,12 @@
             <div id="slide12" class="box column gray crossover manual">
                 <img src="image/cars/12.png" alt="">
                 <div class="content">
-                    <h3>Porsche Cayman</h3>
-                    <div class="price"> <span>price : </span> $45,000/- </div>
+                    <h3>Porsche Boxster GTS</h3>
+                    <div class="price"> <span>price : </span> $89,999/- </div>
                     <p>
-                        2015 -
+                        2022 -
                         Manual -
-                        19,965 miles
+                        857 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -370,12 +370,12 @@
             <div id="slide13" class="box column black other crossover automatic">
                 <img src="image/cars/13.png" alt="">
                 <div class="content">
-                    <h3>Ford Interceptor</h3>
-                    <div class="price"> <span>price : </span> $17,950/- </div>
+                    <h3>Jaguar I-PACE S</h3>
+                    <div class="price"> <span>price : </span>$84,239/- </div>
                     <p>
-                        2017 -
+                        2022 -
                         Automatic -
-                        101,375 miles
+                        523 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -384,12 +384,12 @@
             <div id="slide14" class="box column yellow sportsCar manual">
                 <img src="image/cars/14.png" alt="">
                 <div class="content">
-                    <h3>Porsche Cayman</h3>
-                    <div class="price"> <span>price : </span> $45,000/- </div>
+                    <h3>Tesla Model S Long Range</h3>
+                    <div class="price"> <span>price : </span> $45,999/- </div>
                     <p>
-                        2015 -
-                        Manual -
-                        19,965 miles
+                        2022 -
+                        Automatic -
+                        12,849 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -398,12 +398,12 @@
             <div id="slide15" class="box column white sportsCar manual">
                 <img src="image/cars/15.png" alt="">
                 <div class="content">
-                    <h3>Porsche Panamera</h3>
-                    <div class="price"> <span>price : </span> $26,495/- </div>
+                    <h3>Nissan Leaf SV</h3>
+                    <div class="price"> <span>price : </span> $16,789/- </div>
                     <p>
-                        2010 -
-                        Manual -
-                        76,588 miles
+                        2021 -
+                        Automatic -
+                        32,789 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -412,12 +412,12 @@
             <div id="slide16" class="box column red other truck automatic">
                 <img src="image/cars/16.png" alt="">
                 <div class="content">
-                    <h3>Firetruck</h3>
-                    <div class="price"> <span>price : </span> $250,000/- </div>
+                    <h3>BMW i3 Rex</h3>
+                    <div class="price"> <span>price : </span> $24,567/- </div>
                     <p>
                         2021 -
-                        Automatic -
-                        102,086 miles
+                        Single Speed -
+                        38,769 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -426,12 +426,12 @@
             <div id="slide17" class="box column gray car sportsCar automatic">
                 <img src="image/cars/17.png" alt="">
                 <div class="content">
-                    <h3>Chevrolet Camaro</h3>
-                    <div class="price"> <span>price : </span> $39,499/- </div>
+                    <h3>Chevrolet Bolt Premier</h3>
+                    <div class="price"> <span>price : </span> $15,789/- </div>
                     <p>
-                        2018 -
-                        Automatic -
-                        25,185 miles
+                        2022 -
+                        Single Speed -
+                        26,780 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
@@ -440,12 +440,12 @@
             <div id="slide18" class="box column white truck automatic">
                 <img src="image/cars/18.png" alt="">
                 <div class="content">
-                    <h3>Toyota Tundra</h3>
-                    <div class="price"> <span>price : </span> $9,021/- </div>
+                    <h3>Audi e-tron Premium Plus</h3>
+                    <div class="price"> <span>price : </span> $47,896/- </div>
                     <p>
-                        2009 -
-                        Automatic -
-                        277,114 miles
+                        2022 -
+                        Single Speed -
+                        67,860 miles
                     </p>
                     <a href="#" class="btn">check out</a>
                 </div>
