--- a/explore.html
+++ b/explore.html
@@ -25,7 +25,7 @@
     <header class="header">
         <div id="menu-btn" class="fas fa-bars"></div>
 
-        <a href="#" class="logo"><img src="image/logo.png" alt="AutoWizard Logo"
+        <a href="index.html" class="logo"><img src="image/logo.png" alt="AutoWizard Logo"
                 style="float: right;  padding-left: 10px; padding-bottom: 3px; width: 43px;height:35px;">AutoWizard</a>
 
         <nav class="navbar">
