--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 
     </section>
 
+    <!-- Contact Sidebar -->
     <div id="contactsb" class="contactsb">
         <div class="header">
             <a href="javascript:void(0)" class="close" onclick="closeCU()">&#10005;</a>
@@ -118,6 +119,7 @@
 
     </div>
 
+    <!-- Contact Sidebar Script -->
     <script>
         function openCU() {
             document.getElementById("contactsb").style.width = "350px";
@@ -151,43 +153,29 @@
             <div class="swiper-wrapper">
 
                 <div class="swiper-slide box">
-                    <img src="image/cars/1.png" alt="">
+                    <img src="image/cars/2.png" alt="">
                     <div class="content">
-                        <h3>Kia Sportage</h3>
-                        <div class="price"> <span>price : </span> $24,000/- </div>
+                        <h3>Chevrolet Silverado LTZ</h3>
+                        <div class="price"> <span>price : </span> $27,600/- </div>
                         <p>
-                            2022 -
+                            2021 -
                             Automatic -
-                            109,280 miles
+                            25,670 miles
                         </p>
                         <a href="#" class="btn">check out</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <img src="image/cars/3.png" alt="">
+                    <img src="image/cars/4.png" alt="">
                     <div class="content">
-                        <h3>Chevrolet Equinox Premier</h3>
-                        <div class="price"> <span>price : </span> $27,299/- </div>
-                        <p>
-                            2020 -
-                            Automatic -
-                            13,000 miles
-                        </p>
-                        <a href="#" class="btn">check out</a>
-                    </div>
-                </div>
-
-                <div class="swiper-slide box">
-                    <img src="image/cars/5.png" alt="">
-                    <div class="content">
-                        <h3>Ford Focus ST</h3>
-                        <div class="price"> <span>price : </span> $15,497/- </div>
-                        <p>
-                            2017 -
-                            Automatic -
-                            93,000 miles
-                        </p>
+                        <h3>Audi RS5 Sportback</h3>
+                    <div class="price"> <span>price : </span>$58,930/- </div>
+                    <p>
+                        2021 -
+                        Automatic -
+                        67,950 miles
+                    </p>
                         <a href="#" class="btn">check out</a>
                     </div>
                 </div>
@@ -195,27 +183,41 @@
                 <div class="swiper-slide box">
                     <img src="image/cars/6.png" alt="">
                     <div class="content">
-                        <h3>Kia Sportage</h3>
-                        <div class="price"> <span>price : </span> $23,909/- </div>
-                        <p>
-                            2021 -
-                            Automatic -
-                            20,000 miles
-                        </p>
+                        <h3>BMW M4 Competition</h3>
+                    <div class="price"> <span>price : </span> $62,789/- </div>
+                    <p>
+                        2022 -
+                        Automatic -
+                        58,760 miles
+                    </p>
                         <a href="#" class="btn">check out</a>
                     </div>
                 </div>
 
                 <div class="swiper-slide box">
-                    <img src="image/cars/9.png" alt="">
+                    <img src="image/cars/11.png" alt="">
                     <div class="content">
-                        <h3>Audi e-tron</h3>
-                        <div class="price"> <span>price : </span> $62,000/- </div>
-                        <p>
-                            2019 -
-                            Automatic -
-                            8,670 miles
-                        </p>
+                        <h3>Ford Mustang GT Convertible</h3>
+                    <div class="price"> <span>price : </span> $43,105/- </div>
+                    <p>
+                        2022 -
+                        Manual -
+                        670 miles
+                    </p>
+                        <a href="#" class="btn">check out</a>
+                    </div>
+                </div>
+
+                <div class="swiper-slide box">
+                    <img src="image/cars/14.png" alt="">
+                    <div class="content">
+                        <h3>Tesla Model S Long Range</h3>
+                    <div class="price"> <span>price : </span> $45,999/- </div>
+                    <p>
+                        2022 -
+                        Automatic -
+                        12,849 miles
+                    </p>
                         <a href="#" class="btn">check out</a>
                     </div>
                 </div>
@@ -230,42 +232,42 @@
 
     <!-- Loan Caluclator -->
     <section class="loan" id="loan">
-    <h1 class="heading">Loan Calculator</h1>
-    <div class="row">
-        <form action="">
-            <h3 class="formHeader">Input here</h3>
+        <h1 class="heading">Loan Calculator</h1>
+        <div class="row">
+            <form action="">
+                <h3 class="formHeader">Input here</h3>
 
-            <label>Loan Amount:</label>
-            <input id="amount" type="number" placeholder="Loan Amount..." class="box" required>
-            <label>Loan Term (months):</label>
-            <input id="term" type="number" placeholder="Loan Term (months)..." class="box" required>
-            <label>Interest Rate %:</label>
-            <input id="rate" type="number" placeholder="Interest Rate %..." class="box" required>
-            <label>Down Payment:</label>
-            <input id="downPayment" type="number" placeholder="Down Payment..." class="box">
-            <label>Sales Tax %:</label>
-            <input id="taxRate" type="number" placeholder="Sales Tax %..." class="box" required>
-            <div class="submitButton">
-            <input id="calculate" type="button" value="Calculate" onclick="" class="btn">
-            </div>
-        </form>
+                <label>Loan Amount:</label>
+                <input id="amount" type="number" placeholder="Loan Amount..." class="box" required>
+                <label>Loan Term (months):</label>
+                <input id="term" type="number" placeholder="Loan Term (months)..." class="box" required>
+                <label>Interest Rate %:</label>
+                <input id="rate" type="number" placeholder="Interest Rate %..." class="box" required>
+                <label>Down Payment:</label>
+                <input id="downPayment" type="number" placeholder="Down Payment..." class="box">
+                <label>Sales Tax %:</label>
+                <input id="taxRate" type="number" placeholder="Sales Tax %..." class="box" required>
+                <div class="submitButton">
+                    <input id="calculate" type="button" value="Calculate" onclick="" class="btn">
+                </div>
+            </form>
 
-        <form action="">
-            <h3 class="formHeader">Output</h3>
+            <form action="">
+                <h3 class="formHeader">Output</h3>
 
-            <label>Monthly Payment:</label>
-            <input id="monthly" type="text" placeholder="Monthly Payment" class="box">
-            <label>Total Loan Amount:</label>
-            <input id="totalLoanAmount" type="text" placeholder="Total Loan Amount" class="box">
-            <label>Upfront Cost:</label>
-            <input id="upfront" type="text" placeholder="Upfront Cost" class="box">
-            <label>Total Loan Intrest:</label>
-            <input id="totalLoanIntrest" type="text" placeholder="Total Loan Intrest" class="box">
-            <label>Total Cost:</label>
-            <input id="totalCost" type="text" placeholder="Total Cost" class="box">
-        </form>
-    </div>
-</section>
+                <label>Monthly Payment:</label>
+                <input id="monthly" type="text" placeholder="Monthly Payment" class="box">
+                <label>Total Loan Amount:</label>
+                <input id="totalLoanAmount" type="text" placeholder="Total Loan Amount" class="box">
+                <label>Upfront Cost:</label>
+                <input id="upfront" type="text" placeholder="Upfront Cost" class="box">
+                <label>Total Loan Intrest:</label>
+                <input id="totalLoanIntrest" type="text" placeholder="Total Loan Intrest" class="box">
+                <label>Total Cost:</label>
+                <input id="totalCost" type="text" placeholder="Total Cost" class="box">
+            </form>
+        </div>
+    </section>
 
     <!-- Reviews -->
     <section class="reviews" id="reviews">
