--- a/carInfo.html
+++ b/carInfo.html
@@ -45,6 +45,27 @@
     <!-- Back To Top Button -->
     <button id="backToTopButton" class="backToTopButton" title="Go to top">Top</button>
 
+        <!-- Login Form -->
+        <div class="login-form-container">
+
+            <span id="close-login-form" class="fas fa-times"></span>
+    
+            <form action="">
+                <h3>login</h3>
+                <input type="email" placeholder="email" class="box">
+                <input type="password" placeholder="password" class="box">
+                <p> forgot your password? <a href="#">click here</a> </p>
+                <input type="submit" value="login" class="btn">
+                <p>or login with:</p>
+                <div class="buttons">
+                    <a href="#" class="btn"> google </a>
+                    <a href="#" class="btn"> facebook </a>
+                </div>
+                <p> don't have an account? <a href="#">create one</a> </p>
+            </form>
+    
+        </div>
+
     <section class="carInfo" id="carInfo">
         <div class="content">
 
@@ -98,7 +119,7 @@
 
             <h1 class="description" style="font-family: Unbounded, monospace;">Description</h1>
 
-            <h3> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+            <h3 id="description"> Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                 Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
                 Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a
                 Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the
@@ -110,27 +131,6 @@
         </div>
 
     </section>
-
-    <!-- Login Form -->
-    <div class="login-form-container">
-
-        <span id="close-login-form" class="fas fa-times"></span>
-
-        <form action="">
-            <h3>login</h3>
-            <input type="email" placeholder="email" class="box">
-            <input type="password" placeholder="password" class="box">
-            <p> forgot your password? <a href="#">click here</a> </p>
-            <input type="submit" value="login" class="btn">
-            <p>or login with:</p>
-            <div class="buttons">
-                <a href="#" class="btn"> google </a>
-                <a href="#" class="btn"> facebook </a>
-            </div>
-            <p> don't have an account? <a href="#">create one</a> </p>
-        </form>
-
-    </div>
 
     <input type="button" class="btn" value="wwwwwwwww" onclick="setInfo()" />
 
@@ -213,6 +213,7 @@
             document.getElementById("length").innerText = "Length: " + data[index].length;
             document.getElementById("width").innerText = "Width: " + data[index].width;
             document.getElementById("features").innerText = "Features: \n" + data[index].features;
+            document.getElementById("description").innerText = data[index].description;
 
         }
     </script>
