check out buttons index

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                             Automatic -
                             25,670 miles
                         </p>
-                        <a href="#" class="btn">check out</a>
+                        <a href="#" class="btn" onclick="go(2)">check out</a>
                     </div>
                 </div>
 
@@ -176,7 +176,7 @@
                             Automatic -
                             67,950 miles
                         </p>
-                        <a href="#" class="btn">check out</a>
+                        <a href="#" class="btn"onclick="go(4)" >check out</a>
                     </div>
                 </div>
 
@@ -190,7 +190,7 @@
                             Automatic -
                             58,760 miles
                         </p>
-                        <a href="#" class="btn">check out</a>
+                        <a href="#" class="btn" onclick="go(6)">check out</a>
                     </div>
                 </div>
 
@@ -204,7 +204,7 @@
                             Manual -
                             670 miles
                         </p>
-                        <a href="#" class="btn">check out</a>
+                        <a href="#" class="btn" onclick="go(11)">check out</a>
                     </div>
                 </div>
 
@@ -218,7 +218,7 @@
                             Automatic -
                             12,849 miles
                         </p>
-                        <a href="#" class="btn">check out</a>
+                        <a href="#" class="btn" onclick="go(14)">check out</a>
                     </div>
                 </div>
 
